content/v1.3.0/en/_index.md
---
title: Bannerlord v1.3.0 Documentation / Bannerlord v1.3.0 Documentation
description: Complete English documentation for Bannerlord modding SDK v1.3.0
---
# Bannerlord v1.3.0

## Mental Model

Treat `Bannerlord v1.3.0` as an entry point or data node for this subsystem: inspect its properties first, then decide which methods to call.

Welcome to the Bannerlord v1.3.0 modding documentation (English).

## Navigation

- [Guide](./guide/)
- [API Reference](./api/)
- [XML Reference](./xml-reference/)
- [Native Reference](./native/)
- [Architecture](./architecture/)

## Version Info

- **Game Version**: 1.3.0
- **Release Date**: 2023
- **Note**: v1.3.0 is the version before v1.3.15

## Quick Links

| Category | Description |
|----------|-------------|
| [Mission & Mission-Ext](./api/mission-ext/) | Core game classes |
| [Native](./native/) | NativeObject, INativeArray |

## Usage Example

```csharp
// Use the navigation below to explore guides, API reference, and architecture.
```

<!-- BEGIN SECTION INDEX -->

## Parent Navigation

- [Version Home](../)

## Content Navigation

- [API Reference](./api/) — Complete API reference catalog for Bannerlord SDK
- [Architecture (v1.3.0)](./architecture/) — v1.3.0 architecture documentation
- [Getting Started Guide](./guide/) — Quick start guide for Bannerlord v1.3.0 modding
- [Native Interface (v1.3.0)](./native/) — v1.3.0 native P/Invoke interface
- [XML Reference (v1.3.0)](./xml-reference/) — v1.3.0 XML configuration reference

<!-- END SECTION INDEX -->
