content/v1.3.15/en/_index.md
---
title: Bannerlord v1.3.15 Documentation / Bannerlord v1.3.15 Documentation
description: Complete English documentation for Bannerlord modding SDK v1.3.15
---
# Bannerlord v1.3.15

## Mental Model

Treat `Bannerlord v1.3.15` as an entry point or data node for this subsystem: inspect its properties first, then decide which methods to call.

Welcome to the Bannerlord v1.3.15 modding documentation (English).

## Navigation

> **Recommended starting point**
> New here? Start with the [SDK Overview — module map & layered architecture](./architecture/sdk-overview) to build the big picture.

- [Guide](./guide/)
- [API Reference](./api/)
- [XML Reference](./xml-reference/)
- [Native Reference](./native/)
- [Native 1.3.15 Source Reference](./native-1.3.15-src/)
- [Architecture](./architecture/)

## Version Info

- **Game Version**: 1.3.15
- **Release Date**: 2024
- **Major Updates**: SaveSystem refactored, more [Obsolete] markers

## Quick Links

| Category | Description |
|----------|-------------|
| [Core](./api/core/) | MBSubModuleBase, Module, MBObjectManager |
| [Mission](./api/mission/) | Mission, Agent, Formation, Team |
| [Campaign](./api/campaign/) | PartyBase, MobileParty, Kingdom, Clan |
| [Native](./native/) | NativeObject, INativeArray, EngineMethod |
| [Native 1.3.15 Source](./native-1.3.15-src/) | TaleWorlds.Native.dll exports, type tables, decompiled source index |

## Usage Example

```csharp
// Use the navigation below to explore guides, API reference, and architecture.
```

<!-- BEGIN SECTION INDEX -->

## Parent Navigation

- [Version Home](../)

## Content Navigation

- [API Reference](./api/) — Complete API reference catalog for Bannerlord SDK
- [Architecture](./architecture/) — Bannerlord SDK architecture hub — module map, loading flow, save internals, version delta
- [Getting Started Guide](./guide/) — Quick start guide for Bannerlord modding
- [Native Reference](./native/) — Complete documentation for interacting with native C++ engine via P/Invoke
- [Native 1.3.15 Source Reference](./native-1.3.15-src/) — Decompiled source reference for TaleWorlds.Native.dll v1.3.15
- [XML Reference](./xml-reference/) — Complete XML configuration reference

<!-- END SECTION INDEX -->
